src/objects/TransactionLog__c.object
<CustomObject>
    <description>Stores log information per every data contact/integration call</description>
    <fields>
        <fullName>DebugLog__c</fullName>
        <description>Log to store custom system debug output</description>
        <label>Debug Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ErrorLog__c</fullName>
        <description>Logging error received from external systems</description>
        <label>Error Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IncomingMessage__c</fullName>
        <description>Captures processed incoming message</description>
        <label>Incoming Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MessageDirection__c</fullName>
        <description>Direction of data push</description>
        <label>Message Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutgoingMessage__c</fullName>
        <description>Captures outbound message for transaction run</description>
        <label>Outgoing Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <label>Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TL-{0}</displayFormat>
        <label>Transaction Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>